--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 	<head lang="en">
@@ -30,6 +29,7 @@
 			</div>
 			<div id="titles">
 				<p id="songName"></p>
+				<p id="videoName"></p>
 			</div>
 			<img id="logo" src="logo.png"></img>
 			<input id="next" type="button" value="change song"></input>
